# geoCFD

./: CMakeLists.txt  README.md
data/: adjacencies.txt  adjacency.txt  adjacency2.txt  adjacency5.txt  adjacency7.txt  adjacency8.txt  bignef_convex_exterior_2.json  bignef_exterior.json  bignef_merged_5_interior.json  bignef_merged_exterior.json  bignef_merged_exterior_5.json  bignef_merged_interior_2.json  bignefpolyhedron_3buildings.json  bignefpolyhedron_3buildings_interior.json  bignefpolyhedron_convex.json  building_18412_0.json  buildingset_1_exterior_m=0.1.json  buildingset_1_exterior_m=0.5.json  buildingset_1_multi.json  buildingset_1_multi_m=0.1.json  exterior_multi_m=0.1.json
data/all_adjacencies/: all_adjacencies_1.txt  all_adjacencies_2.txt  all_adjacencies_3.txt  all_adjacencies_4.txt  all_adjacencies_5.txt  all_adjacency_example.txt  lod=2.2_m=0.01_all_adjacencies_1.off  lod=2.2_m=0.01_all_adjacencies_2.off  lod=2.2_m=0.01_all_adjacencies_3.off  lod=2.2_m=0.01_all_adjacencies_4.off  lod=2.2_m=0.01_all_adjacencies_5.off
data/alladjacency/: lod=2.2_m=0.010_all_adjacency.off
data/dataset_1/: adjacency1.txt
data/dataset_6/: adjacency6.txt
data/lod1.2/: buildingset_1_exterior_m=0.1.json  buildingset_1_interior_m=0.1.json
data/lod1.3/: buildingset_1_exterior_multi_v2.0_m=0.1.json  buildingset_1_interior_m=0.5_multi_threading.json
data/lod2.2/: buildingset_1_exterior_multi_v2.0_m=0.1.json  lod2.2_set_1_interior_m=0.1.json  (+2 more)
src/: JsonHandler.hpp  JsonWriter.hpp  Multi.txt  MultiThread.hpp  Polyhedron.hpp  backup_main.txt  main.cpp  readme.md
(+60 files in other folders)
